--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        def twitterApiKey = properties.getProperty("twitter_api_key", "")
+        buildConfigField "String", "TWITTER_API_KEY", twitterApiKey
     }
 
     buildTypes {
@@ -58,8 +63,8 @@ dependencies {
 
     //Lifecycle
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
 
     //Data Binding
     kapt 'com.android.databinding:compiler:3.1.4'
